v0.0.2.5----初步支持插件,但拓展功能比较单一,下一步添加功能